--- a/GestionHotelera/AccesoData/app.config
+++ b/GestionHotelera/AccesoData/app.config
@@ -6,5 +6,8 @@
         <add name="AccesoData.Properties.Settings.gestionHoteleraConnectionString"
             connectionString="Data Source=.;Initial Catalog=gestionHotelera;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="AccesoData.Properties.Settings.gestionHoteleraConnectionString1"
+            connectionString="Data Source=DESKTOP-19SOTBV\SQLEXPRESS;Initial Catalog=gestionHotelera;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
