--- a/GestionHotelera/GestionHotelera/GestionHotelera.csproj
+++ b/GestionHotelera/GestionHotelera/GestionHotelera.csproj
@@ -1158,8 +1158,13 @@
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="img\blue.jpg" />
+    <Content Include="img\purple.jpg" />
+    <Content Include="img\red.jpg" />
+    <Content Include="WFHotel.aspx" />
     <Content Include="WFIdentificacion.aspx" />
     <Content Include="WFPruebas.aspx" />
+    <Content Include="WFRol.aspx" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="img\arrow-up.png" />
     <Content Include="img\avatar-mini.jpg" />
@@ -1364,6 +1369,13 @@
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
     </Compile>
+    <Compile Include="WFHotel.aspx.cs">
+      <DependentUpon>WFHotel.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WFHotel.aspx.designer.cs">
+      <DependentUpon>WFHotel.aspx</DependentUpon>
+    </Compile>
     <Compile Include="WFIdentificacion.aspx.cs">
       <DependentUpon>WFIdentificacion.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -1377,6 +1389,13 @@
     </Compile>
     <Compile Include="WFPruebas.aspx.designer.cs">
       <DependentUpon>WFPruebas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WFRol.aspx.cs">
+      <DependentUpon>WFRol.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WFRol.aspx.designer.cs">
+      <DependentUpon>WFRol.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
