--- a/GestionHotelera/GestionHotelera/Web.config
+++ b/GestionHotelera/GestionHotelera/Web.config
@@ -5,10 +5,11 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--<add name="gestionHoteleraConnectionString" connectionString="Data Source=.;Initial Catalog=gestionHotelera;Integrated Security=True"
-      providerName="System.Data.SqlClient" />-->
-    <add name="gestionHoteleraConnectionString2" connectionString="Data Source=DESKTOP-19SOTBV\SQLEXPRESS;Initial Catalog=gestionHotelera;Integrated Security=True"
+    <add name="gestionHoteleraConnectionString" connectionString="Data Source=.;Initial Catalog=gestionHotelera;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <!--<add name="gestionHoteleraConnectionString2" connectionString="Data Source=DESKTOP-19SOTBV\SQLEXPRESS;Initial Catalog=gestionHotelera;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
+    
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
